# shortsMaker

./: .env.example  .gitignore  CLAUDE.md  README.md  changes.md  choice.yaml  config.yaml  dev-start.sh  dev-stop.sh  pyproject.toml  shortsMaker_spec.md
backend/: config.py  main.py
backend/models/: schemas.py
backend/routers/: images.py  projects.py  prompts.py  quotes.py
backend/services/: image_service.py  llm_service.py  overlay_service.py  parse_service.py
backend/services/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  ollama_provider.py
backend/storage/: __init__.py  file_storage.py
backend/templates/: quote_card.html
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BackgroundChooser.tsx  CardGallery.tsx  CollectionView.tsx  EditableProjectName.tsx  EntryList.tsx  FormatChooser.tsx  HomePage.tsx  ImageCreationForm.tsx  ImageGallery.tsx  LibraryPage.tsx  ProjectSelector.tsx  PromptReview.tsx  SourcePicker.tsx  StoryboardView.tsx  SummaryReview.tsx
frontend/src/context/: WorkflowContext.tsx
