[project]
name = "storyboard-maker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "anthropic==0.40.0",
    "fastapi==0.115.5",
    "google-genai==1.14.0",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "uvicorn[standard]==0.32.1",
]
